# Proyecto_Salario_Empleado

./: Min.py  README.md  main.py  pyproject.toml
