[project]
name = "proyecto-salario-empleado"
version = "0.1.0"
description = ""
authors = [
    {name = "Lia Torres"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "reflex (>=0.8.27,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
